--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,10 @@ li {
   font-weight: 100;
   line-height: 19px;
 }
+
+li:first-letter {
+  text-transform: capitalize;
+}
 .overview {
   margin-bottom: 20px;
 }
