--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .weather-app-wrapper {
-  max-width: 600px;
+  max-width: 400px;
+  max-height: 500px;
   margin: 30px auto;
 }
 .weather-app {
