--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 .weather-app-wrapper {
   max-width: 400px;
