--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .weather-app-wrapper {
   max-width: 500px;
@@ -7,29 +7,30 @@ body {
   margin: 20px auto;
 }
 .weather-app {
-  padding: 20px;
+  padding: 15px;
   border: 1px solid #dadde1;
   border-radius: 5px;
-  background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 
 h1 {
   color: #878787;
+  margin: 30px auto;
   font-size: 24px;
   font-weight: 100;
   height: 27.7778px;
   line-height: 28px;
-
+  text-align: center;
   margin-bottom: 0;
 }
 ul {
-  margin: 0;
+  text-align: center;
+  margin: 20px;
   padding: 0;
 }
 
 li {
   list-style: none;
-  margin: 0;
+  margin: 5px auto;
   padding: 0;
   text-transform: capitalize;
   color: rgb(135, 135, 135);
@@ -59,4 +60,17 @@ li:first-letter {
   position: relative;
   font-size: 16px;
   top: -34px;
+}
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+.forecast-date,
+.weather-forecast-temp-min {
+  font-size: 16px;
+  opacity: 0.5;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
 }
