--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,34 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
+  color: #fff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 420px 600px;
+  opacity: 0.5px;
 }
 .weather-app-wrapper {
-  max-width: 500px;
+  max-width: 420px;
 
-  margin: 20px auto;
+  margin: 40px auto;
 }
 .weather-app {
   padding: 15px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
+  border: none;
+  border-radius: 15px;
+}
+.form-control {
+  background: none;
+  border: none;
+  border-bottom: 1px #000 solid;
+}
+.form-control::placeholder {
+  color: #000;
 }
 
 h1 {
-  color: #878787;
-  margin: 30px auto;
-  font-size: 24px;
+  color: rgb(144, 142, 142);
+  margin: 50px auto;
+  font-size: 40px;
   font-weight: 100;
   height: 27.7778px;
   line-height: 28px;
@@ -33,8 +46,8 @@ li {
   margin: 5px auto;
   padding: 0;
   text-transform: capitalize;
-  color: rgb(135, 135, 135);
-  font-size: 16px;
+  color: #ffff;
+  font-size: 20px;
   font-weight: 100;
   line-height: 19px;
 }
@@ -42,8 +55,15 @@ li {
 li:first-letter {
   text-transform: capitalize;
 }
+
 .overview {
   margin-bottom: 20px;
+}
+p {
+  color: #fff;
+}
+.temperature {
+  font-size: 26px;
 }
 .weather-temperature img {
   margin-right: 5px;
@@ -51,26 +71,30 @@ li:first-letter {
   width: 64px;
 }
 .weather-temperature strong {
-  color: rgb(33, 33, 33);
-  font-size: 64px;
+  color: rgb(255, 252, 252);
+  font-size: 60px;
   line-height: 1;
   font-weight: 400;
 }
 .weather-temperature .units {
   position: relative;
-  font-size: 16px;
+  font-size: 12px;
   top: -34px;
 }
 .weather-forecast {
-  margin-top: 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
   text-align: center;
-  color: black;
+  color: #ffff;
 }
 .forecast-date,
 .weather-forecast-temp-min {
-  font-size: 16px;
+  font-size: 18px;
   opacity: 0.5;
 }
 .weather-forecast-temperature {
-  font-size: 13px;
+  font-size: 22px;
+}
+.coder {
+  color: #fff;
 }
